--- a/TangoBinaryDecoder/TangoBinaryDecoder.csproj
+++ b/TangoBinaryDecoder/TangoBinaryDecoder.csproj
@@ -19,7 +19,7 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
-    <Commandlineparameters>/Users/mohitd/Desktop/2015_06_03_153813.txt</Commandlineparameters>
+    <Commandlineparameters>/Users/mohitd/Desktop/2015_06_03_153813.txt /Users/mohitd/Desktop/out_2015_06_03_153813.txt</Commandlineparameters>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
